--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Vite exposes variables prefixed with VITE_ to the browser bundle (not private).
 VITE_SITE_TITLE="Erfan Echresh"
-VITE_PROFILE_IMAGE_URL="icon.ico"
+VITE_PROFILE_IMAGE_URL="icon2.jpg"
 VITE_GITHUB_REPO_URL="https://github.com/erfaninho/personal-website"
 VITE_GITHUB_PROFILE_URL="https://github.com/erfaninho"
 VITE_LINKEDIN_URL="https://www.linkedin.com/in/mohammad-erfan-echresh-4b51a2263/"
