Adding Temporary AI Api Caller

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ VITE_GITHUB_REPO_URL="https://github.com/erfaninho/personal-website"
 VITE_GITHUB_PROFILE_URL="https://github.com/erfaninho"
 VITE_LINKEDIN_URL="https://www.linkedin.com/in/mohammad-erfan-echresh-4b51a2263/"
 VITE_CONTACT_EMAIL="erfan_bcln@yahoo.com"
+VITE_API_MODELS="gemini-2.5-flash-lite,gemini-2.5-flash-lite,gemini-2.5-flash,gemini-3-flash-preview,gemini-2.5-pro"
 
